@@ -35,8 +35,11 @@
 //#define THREAD_LOCAL thread_local
 
 void set_instance_id(unsigned);
+void set_instance_max(unsigned);
+
 unsigned get_instance_id();
 unsigned get_instance_max();
+
 const char* get_instance_file(std::string&, const char* name);
 
 #endif
